# nova-ai-assistant

./: .gitmessage.txt  .releasec.json  .releaserc.json  README.md  package.json  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: backmerge-develop.yml  ci.yml  release-on-master.yml  release.yml
src/: main.py
src/nova/: __init__.py  __main__.py  config.json  main.py  memory.json  scenarios.json
src/nova/plugins/: __init__.py  brightness_control.py  calculator.py  file_manager.py  media_control.py  note_taker.py  open_browser.py  scenario_control.py  system_control.py  text_to_speech.py  timer_alarm.py  volume_control.py
src/plugins/: __init__.py  open_browser.py  volume_control.py
