[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nova"
version = "0.1.0"
description = "Voice assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SpeechRecognition",
    "keyboard",
]

[project.scripts]
nova = "nova.__main__:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nova = ["config.json", "scenarios.json", "memory.json"]
